feature: match info rules (#392)
* feat(ATW-r7bh): add SegmentRulePlayGuide domain records and JPA converter

Introduces SegmentRulePlayGuide and SegmentRuleVariantGuide records to
represent structured solo/multiplayer gameplay rules for each match type.
Stores them as a single LONGTEXT column via SegmentRulePlayGuideConverter
(Jackson AttributeConverter). A SHA-256 hash column (rules_hash) avoids
full-text comparison on every startup sync.

- SegmentRulePlayGuide / SegmentRuleVariantGuide records
- SegmentRulePlayGuideConverter (JPA AttributeConverter)
- SegmentRule: rules_json + rules_hash fields
- SegmentRuleDTO: rules field (auto-deserialized from JSON)
- SegmentRuleService: 7-arg createOrUpdateRule with hash dirty-check;
  5/6-arg overloads delegate to it (rules=null)
- DataInitializer: passes dto.getRules() to createOrUpdateRule
- Flyway: H2 V106 + MySQL V75 ADD COLUMN rules_json / rules_hash

* feat(ATW-pwlo): populate segment_rules.json with structured gameplay rules

Adds solo and multiplayer play guide sections to 14 of 18 match types
(Free-For-All omitted — no distinct rules beyond its description).
Each entry covers: overview, setup, attacking, defending, winCondition,
npcRecovery, and mode-specific fields (topOfCageStruggle for Cage;
concepts/gameplayChanges/modeSpecificAbilities/gameEndConditions for
multiplayer). The rules field is optional — entries without gameplay
documentation omit it.

* feat(ATW-56gt, ATW-c66m): add MatchInfoView and how-to-play entry points

MatchInfoView (@Route match-info/:ruleId) renders a match type's gameplay
rules as collapsible Solo Play / Multiplayer sections using Vaadin Details
and labeled H3/Paragraph blocks. Null-safe: shows a placeholder when rules
aren't populated yet.

Entry points:
- ShowDetailView: info icon button per segment row (visible only when the
  segment has at least one rule); navigates to match-info/{ruleId}
- MatchView: "How to Play" button in the match header; navigates to the
  same route using th